compiler/testData/diagnostics/tests/platformTypes/comparingWithWrongNullability.fir.kt
// RUN_PIPELINE_TILL: BACKEND
// FIR_DUMP
// FULL_JDK
// LANGUAGE: -DontMakeExplicitJavaTypeArgumentsFlexible

import java.util.Comparator;

fun foo() {
    Comparator.comparing<String?, <!UPPER_BOUND_VIOLATED_BASED_ON_JAVA_ANNOTATIONS("Comparable<in Boolean!>!; Boolean?")!>Boolean?<!>> {
        it != ""
    }
}

/* GENERATED_FIR_TAGS: equalityExpression, flexibleType, functionDeclaration, inProjection, javaFunction, lambdaLiteral,
outProjection, samConversion, stringLiteral */
